--- a/pizzamania.html
+++ b/pizzamania.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg bg-warning">
+<nav class="navbar navbar-expand-lg bg-warning fixed-top">
     <div class="container-fluid">
         <a href="#" class="navbar-brand">PIZZAMANIA</a>
     </div>
@@ -48,15 +48,15 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/pizza/istockphoto-1298255689-612x612.jpg" class="d-block w-100" 
+        <img src="/Users/admin/Documents/web dev/pizzamania/pizza/istockphoto-1298255689-612x612.jpg" class="d-block w-100" 
         alt="Pepperoni" style="height: 600px;">
       </div>
       <div class="carousel-item">
-        <img src="images/pizza/people-eating-takeout-pizza-885 (2).jpg" class="d-block w-100" 
+        <img src="/Users/admin/Documents/web dev/pizzamania/pizza/people-eating-takeout-pizza-885 (2).jpg" class="d-block w-100" 
         alt="Vegetable" style="height: 600px; width: fit-content;">
       </div>
       <div class="carousel-item">
-        <img src="images/pizza/360_F_463698797_QqwDBblKVCcPriiYm6iwG0TQpOQb1WO9.jpg" 
+        <img src="/Users/admin/Documents/web dev/pizzamania/pizza/360_F_463698797_QqwDBblKVCcPriiYm6iwG0TQpOQb1WO9.jpg" 
         class="d-block w-100" alt="360" style="height: 600px;">
       </div>
     </div>
@@ -79,7 +79,7 @@
 <div class="container">
     <div class="d-flex flex-row">
         <div>
-            <img src="images/pizza/Pizza-Toppings.jpg.webp" alt="pizzatoppings" 
+            <img src="/Users/admin/Documents/web dev/pizzamania/pizza/Pizza-Toppings.jpg.webp" alt="pizzatoppings" 
             style="height: 400px; width: 600px;">
         </div>
         <div class="px-4">
@@ -110,7 +110,7 @@
 <div class="container">
     <div class="d-flex flex-row">
         <div class="card p-2" style="width: 21rem;">
-            <img src="images/pizza/Pepperoni-Pizza_5-SQjpg.jpg.webp" 
+            <img src="/Users/admin/Documents/web dev/pizzamania/pizza/Pepperoni-Pizza_5-SQjpg.jpg.webp" 
             class="card-img-top" alt="pep">
             <div class="card-body">
             <h3>Pepperoni Pizza</h3>
@@ -121,7 +121,7 @@
           </div>
 
           <div class="card p-2" style="width: 21rem;">
-            <img src="images/pizza/216054.jpg" 
+            <img src="/Users/admin/Documents/web dev/pizzamania/pizza/216054.jpg" 
             class="card-img-top" alt="veg">
             <div class="card-body">
                 <h3>Vegetable Pizza</h3>
@@ -132,7 +132,7 @@
           </div>
 
           <div class="card p-2" style="width: 20rem;">
-            <img src="images/pizza/classic-cheese-pizza-FT-RECIPE0422-31a2c938fc2546c9a07b7011658cfd05.jpg" 
+            <img src="/Users/admin/Documents/web dev/pizzamania/pizza/classic-cheese-pizza-FT-RECIPE0422-31a2c938fc2546c9a07b7011658cfd05.jpg" 
             class="card-img-top" alt="cheeze" style="height: 258px;">
             <div class="card-body">
                 <h3 class="pt-0">Cheese Pizza</h3>
@@ -143,7 +143,7 @@
           </div>
 
           <div class="card p-2" style="width: 22rem;">
-            <img src="images/pizza/Goat-Cheese-Pizza-014.jpg" 
+            <img src="/Users/admin/Documents/web dev/pizzamania/pizza/Goat-Cheese-Pizza-014.jpg" 
             class="card-img-top" alt="cheeze" style="height: 256px;">
             <div class="card-body">
                 <h3>Goat-Cheese Pizza</h3>
