Updated linking of various parts

--- a/pizzamania.html
+++ b/pizzamania.html
@@ -23,11 +23,11 @@
             </li>   
 
             <li class="nav-item">
-                <a href="#" class="nav-link">AboutPizza</a>
+                <a href="#aboutPizza" class="nav-link">AboutPizza</a>
             </li>
 
             <li class="nav-item">
-                <a href="#" class="nav-link">PizzaTypes</a>
+                <a href="#pizzaTypes" class="nav-link">PizzaTypes</a>
             </li>
 
             </ul>
@@ -72,8 +72,8 @@
     </button>
   </div>
 
-<div class="text-center text-lg p-3" id="about">
-    About Pizza
+<div class="text-center text-lg p-3" id="aboutPizza">
+    About Pizza 
 </div>
 
 <div class="container">
@@ -103,7 +103,7 @@
     </div>
 </div>
 
-<div class="text-center text-lg p-3" id="about">
+<div class="text-center text-lg p-3" id="pizzaTypes">
     Pizza Types
 </div>
 
